# fpodms

./: README.md  mkdocs.yml  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  post-create.yaml
.trunk/: trunk.yaml
docs/: index.md
fpodms/: __init__.py  api.py  export.py
src/fpodms/: __init__.py
tests/: test_fpodms.py
