[project]
name = "fpodms"
version = "0.1.2"
description = ""
authors = [
  { name = "Charlie Bini", email = "5003326+cbini@users.noreply.github.com" },
]
dependencies = [
  "requests>=2.28.1",
  "inflection>=0.5.1",
  "python-dateutil>=2.8.2",
]
requires-python = ">=3.9"
readme = "README.md"
license = { text = "MIT" }

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = []

[build-system]
requires = ["pdm-pep517>=1.0.0"]
build-backend = "pdm.pep517.api"
